--- a/postmanmockserver/style2.css
+++ b/postmanmockserver/style2.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:600px) {
+@media screen and (min-width:800px) {
     body{
         margin: 0;
         padding: 0;
@@ -12,35 +12,41 @@
         margin-right: 20%;
         margin-bottom: 5%;
         margin-top: 5%;
-    }
-    .firstb{
         display: flex;
         flex-direction: row;
+        align-items: center;
     }
+    /* .firstb{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    } */
     .icon{
         height: 40%;
         width: 40%;
-        margin-top: 10%;
+        /* margin-top: 10%; */
         display: flex;
         flex: 1;
     }
     .leftside{
         display: flex;
         flex: 3;
+        align-items: center;
     }
     .rightside{
         display: flex;
         flex: 2;
+        align-items: center;
     }
     .name{
         display: flex;
-        flex: 8;
+        flex: 8; 
         font-size: 17px;
         font-family: Arial, Helvetica, sans-serif;
     }
     .signin{
         display: flex;
-        flex: 1; 
+        flex: 1;  
         font-family: sans-serif,Arial;
         font-size: 20px;
         font-weight: bold;
@@ -54,7 +60,7 @@
     }
     .started{
         display: flex;
-        flex: 1; 
+        flex: 2;   
         font-family: sans-serif,Arial;
         font-size: 20px;
         font-weight: bold;
@@ -67,12 +73,12 @@
         color: rgba(58, 30, 216, 0.651);
         text-decoration: none;
     }
-    /* .rect{
-        border:1px solid rgba(58, 30, 216, 0.651);  
+    .rect{
+        border:2px solid rgba(58, 30, 216, 0.651);  
         text-decoration: none;
-        border-radius: 5px;
-        border-width: 1px;
-    } */
+        /* border-radius: 5px;
+        border-width: 1px; */
+    } 
     .second{
         max-width: 800px;
         margin-left: 30%;
@@ -127,7 +133,7 @@
     }
     }
     
-    @media screen and (max-width:600px) {
+    @media screen and (max-width:800px) {
         body{
             margin: 0;
             padding: 0;
@@ -141,10 +147,9 @@
             margin-right: 2%;
             margin-bottom: 5%;
             margin-top: 5%;
-        }
-        .firstb{
             display: flex;
             flex-direction: row;
+            align-items: center;
         }
         .icon{
             height: 60%;
@@ -182,12 +187,17 @@
             color: rgba(58, 30, 216, 0.651);
             text-decoration: none;
         }
+        .rect{
+            border:2px solid rgba(58, 30, 216, 0.651);  
+            text-decoration: none;
+        } 
         .second{
             text-align: left;
             margin-right: 7%;
         }
         .b1{
             font-size: 10px;
+            padding-top: 10px; 
         }
         .b2{
             color: rgb(95, 92, 92);
@@ -224,5 +234,15 @@
             color: rgb(27, 24, 24);
             letter-spacing: -0.0001em;
             font-size: 20px;
+        }
+        .third-first-letter{
+            /* initial-letter: 9; */
+            font-size: 35px;
+            color: #fff;
+            background-color: black;
+            border-radius: 50%;
+            width: 250px;
+            height: 160px;
+            padding: 0 20px;
         }
     }
