--- a/postmanmockserver/templates/index2.ejs
+++ b/postmanmockserver/templates/index2.ejs
@@ -17,7 +17,7 @@
         </div> 
 </div> <br/><br/>
 <div class="data">
-        <p><%= jdata["item"]["data"] %> </p> <br/>
+        <p><span class="third-first-letter"><%= jdata["item"]["datafl"] %></span><%= jdata["item"]["data"] %> </p> <br/>
         <p>
             <%= jdata["item"]["data1"] %> 
         </p>
@@ -27,4 +27,4 @@
         <p>&#8226; <%= jdata["item"]["data4"] %>
         </p>
         <p>&#8226;  <%= jdata["item"]["data5"] %> </p>
-</div>
+</div> 
