--- a/postmanmockserver/templates/index2.ejs
+++ b/postmanmockserver/templates/index2.ejs
@@ -6,7 +6,7 @@
     </div> <br/>
     <div class="profile">
         <div class="img">
-            <img src="images/david.jpeg" style="border-radius: 50% 50%;" alt="avatar">
+            <img src="<%= jdata['data']['image'] %>" style="border-radius: 50% 50%;" alt="avatar">
         </div>
         <div class="pname">
             <p><%= jdata["data"]["auth"] %></p>
@@ -27,4 +27,4 @@
         <p>&#8226; <%= jdata["data"]["li3"] %>
         </p>
         <p>&#8226;  <%= jdata["data"]["li4"] %> </p>
-</div> 
+</div>  
