--- a/templates/index2.ejs
+++ b/templates/index2.ejs
@@ -1,4 +1,4 @@
-<div class="b1">
+<div class="b1"> 
     <h1><%= jdata["item"]["b1"] %></h1>
 </div>
 <div class="b2">
@@ -6,7 +6,7 @@
     </div> <br/>
     <div class="profile">
         <div class="img">
-            <img src="images/david.jpeg" style="border-radius: 50% 50%;" alt="avatar">
+            <img src=" <%= jdata["item"]["image"] %>" style="border-radius: 50% 50%;" alt="avatar">
         </div>
         <div class="pname">
             <p><%= jdata["item"]["pname"] %></p>
