--- a/style2.css
+++ b/style2.css
@@ -8,19 +8,11 @@
     .first{
         width: auto;
         margin: auto;
-        margin-left: 20%;
-        margin-right: 20%;
-        margin-bottom: 5%;
-        margin-top: 5%;
+        margin: 5% 20% 5% 20%;
         display: flex;
         flex-direction: row;
         align-items: center;
     }
-    /* .firstb{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-    } */
     .icon{
         height: 40%;
         width: 40%;
@@ -81,7 +73,7 @@
     } 
     .second{
         max-width: 800px;
-        margin-left: 30%;
+        margin-left: 20%;
         margin-right: 20%;
         text-align: left;
     }
